[package]
name = "advent_of_code"
version = "0.1.0"
authors = ["Sven Niederberger <s-niederberger@outlook.com>"]
edition = "2018"

[[bin]]
name = "day1"
path = "src/day1/main.rs"

[[bin]]
name = "day2"
path = "src/day2/main.rs"

[[bin]]
name = "day3"
path = "src/day3/main.rs"

[[bin]]
name = "day4"
path = "src/day4/main.rs"

[[bin]]
name = "day5"
path = "src/day5/main.rs"

[[bin]]
name = "day6"
path = "src/day6/main.rs"

[dependencies]
csv = "1.1"